Implement static token functionality (#31)
* add user login with static token

* add tests'

* add normal static token
